--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,41 @@
-// Начните писать стили здесь
+@import "normalize";
+@import "variables.scss";
+@import "common.scss";
+@import "blocks/container.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/logo.scss";
+@import "blocks/page-header.scss";
+
+
+
+
+
+
+// @import "blocks/advantages.scss";
+// @import "blocks/button.scss";
+// @import "blocks/catalog-list.scss";
+// @import "blocks/comments.scss";
+// @import "blocks/copyright.scss";
+// @import "blocks/more-product.scss";
+// @import "blocks/page-footer.scss";
+// @import "blocks/program-item.scss";
+// @import "blocks/programs.scss";
+// @import "blocks/program-selection.scss";
+// @import "blocks/promo.scss";
+// @import "blocks/properties.scss";
+// @import "blocks/questionnaire.scss";
+// @import "blocks/questionnaire-form.scss";
+// @import "blocks/related-products.scss";
+// @import "blocks/section-title.scss";
+// @import "blocks/select-program.scss";
+// @import "blocks/site-list.scss";
+// @import "blocks/slider-control.scss";
+// @import "blocks/social.scss";
+// @import "blocks/special-offer.scss";
+// @import "blocks/stats.scss";
+// @import "blocks/story.scss";
+// @import "blocks/story-slider.scss";
+// @import "blocks/contact-details.scss";
+// @import "blocks/additionally.scss";
+// @import "blocks/contacts.scss";
+// @import "blocks/personal-data.scss";
