--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -7,8 +7,6 @@
   }
 }
 
-
-
 .main-nav__toggle {
   position: absolute;
   width: 25px;
@@ -26,12 +24,6 @@
     display: none;
   }
 }
-
-.main-nav--closed {
-  min-height: 73px;
-  background-color: #161c36;
-}
-
 
 .main-nav--closed .main-nav__toggle::before {
   content: "";
@@ -51,11 +43,6 @@
   }
 }
 
-.main-nav--opened {
-  min-height: 568px;
-  background-color: #9ce46c;
-}
-
 .main-nav--opened .main-nav__toggle {
   position: absolute;
   width: 18px;
@@ -68,8 +55,14 @@
 }
 
 
-// .main-nav--nojs .main-nav__toggle {
-//   @media (max-width: $mobile-width-only) {
-//     display: none;
-//   }
-// }
+.main-nav--nojs .main-nav__toggle {
+  @media (max-width: $mobile-width-only) {
+    display: none;
+  }
+}
+
+.main-nav--nojs .main-nav__wrapper  {
+  @media (max-width: $mobile-width-only) {
+    display: block;
+  }
+}
