--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -24,13 +24,14 @@
   margin: 26px 0 0 -2px;
 
   @media (min-width: $tablet-width) {
-    width: 174px;
-    min-height: 52px;
+    margin-top: 44px;
+    width: 168px;
+    min-height: 42px;
   }
 
   @media (min-width: $desktop-width) {
     width: 202px;
-    min-height: 59px;
+    min-height: 52px;
   }
 
   &--hidden {
