--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,7 +1,8 @@
 .page-header {
   &--closed {
     min-height: 73px;
-    background-color: #161c36c4;
+    // background-color: #161c36;
+    background-color: #161c369d;
   }
 
   &--opened {
