--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -45,8 +45,8 @@
 
 .main-nav--opened .main-nav__toggle {
   position: absolute;
-  width: 18px;
-  height: 18px;
+  width: 20px;
+  height: 20px;
   top: 26px;
   right: 3px;
   border: none;
@@ -69,7 +69,7 @@
 
 .main-nav__site,
 .main-nav__contacts,
-.main-nav__user,
+.main-nav__auth,
 .main-nav__social {
   margin: 0;
   padding: 0;
@@ -83,10 +83,18 @@
   margin: 63px 0 55px;
 }
 
-.main-nav__user {
+.main-nav__auth {
   margin-bottom: 65px;
+  font-size: 17px;
+  line-height: 30px;
+  font-weight: 700;
+  text-align: center;
+  color:  #192144;
 }
 
 .main-nav__contacts {
   margin-bottom: 25px;
 }
+
+
+
