--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -24,7 +24,8 @@
   margin: 26px 0 0 -2px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 44px;
+    margin: 0;
+    margin-top: 5px;
     width: 168px;
     min-height: 42px;
   }
