--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,10 +3,20 @@
     min-height: 73px;
     // background-color: #161c36;
     background-color: #161c369d;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 40px;
+      min-height: 132px;
+    }
   }
 
   &--opened {
     min-height: 568px;
     background-color: #ffffff;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 40px;
+      min-height: 132px;
+    }
   }
 }
