--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -3,6 +3,16 @@
   line-height: 35px;
   font-weight: 500;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 71px;
+    font-weight: 500;
+    text-align: left;
+  }
+
+
+
 }
 
 .site-nav a {
