--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,23 +3,21 @@
   justify-content: flex-start;
   list-style: none;
   margin-left: 84px;
+  
 
-  // @media (min-width: $tablet-width) {
-  //   margin: 0;
-  //   padding: 0;
-  //   padding-left: 20px;
-  //   width: 146px;
-  // }
+  @media (min-width: $tablet-width) {
+    align-items: center;
+  }
 }
 
 .social__item {
   margin-top: 4px;
   margin-right: 27px;
 
-  // @media (min-width: $tablet-width) {
-  //   margin: 0;
-  //   padding-bottom: 10px;
-  // }
+  @media (min-width: $tablet-width) {
+    margin-top: 6px;
+    margin-right: 35px;
+  }
 
   // @media (min-width: $desktop-width) {
   //   padding: 0;
@@ -38,20 +36,25 @@
     opacity: 0.3;
   }
 
-  // @media (min-width: $tablet-width) {
-  //   &--vk {
-  //     width: 30px;
-  //     height: 16px;
-  //   }
+  &--vk {
+    @media (min-width: $tablet-width) {
+      width: 30px;
+      height: 16px;
+    }
+  }
 
-  //   &--instagram {
-  //     width: 23px;
-  //     height: 23px;
-  //   }
+  &--instagram {
+    @media (min-width: $tablet-width) {
+      width: 23px;
+      height: 23px;
+    }
+  }
 
-  //   &--fb {
-  //     width: 14px;
-  //     height: 28px;
-  //   }
-  // }
+  &--fb {
+    @media (min-width: $tablet-width) {
+      width: 14px;
+      height: 28px;
+    }
+  }
 }
+
