--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,8 +1,7 @@
 .page-header {
   &--closed {
     min-height: 73px;
-    // background-color: #161c36;
-    background-color: #161c369d;
+    background-color: #161c36;
 
     @media (min-width: $tablet-width) {
       padding-top: 40px;
@@ -17,6 +16,10 @@
     @media (min-width: $tablet-width) {
       padding-top: 40px;
       min-height: 132px;
+    }
+
+    @media (min-width: $desktop-width) {
+      background-color: #161c36;
     }
   }
 }
