--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -8,6 +8,11 @@
   @media (min-width: $tablet-width) {
     align-items: center;
   }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+
 }
 
 .social__item {
@@ -18,10 +23,6 @@
     margin-top: 6px;
     margin-right: 35px;
   }
-
-  // @media (min-width: $desktop-width) {
-  //   padding: 0;
-  // }
 }
 
 .social__icon {
