--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,8 +9,9 @@
 @import "blocks/contacts-list.scss";
 @import "blocks/social.scss";
 @import "blocks/button.scss";
-
-
+@import "blocks/promo.scss";
+@import "blocks/promo-contacts.scss";
+@import "blocks/promo-list.scss";
 
 
 
