--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -4,8 +4,13 @@
     background-color: #161c36;
 
     @media (min-width: $tablet-width) {
+      background-color: #182044;
       padding-top: 40px;
       min-height: 132px;
+    }
+
+    @media (min-width: $desktop-width) {
+      background-color: #161c34;
     }
   }
 
@@ -19,7 +24,7 @@
     }
 
     @media (min-width: $desktop-width) {
-      background-color: #161c36;
+      background-color: #161c34;
     }
   }
 }
