--- a/source/sass/blocks/promo-list.scss
+++ b/source/sass/blocks/promo-list.scss
@@ -5,30 +5,77 @@
   line-height: 18px;
   font-weight: 700;
   list-style: none;
-  color: #161c35;
-
+ 
   @media (min-width: $tablet-width) {
-    
+    display: grid;
+    grid-template-columns: 344px 21px 323px;
+    grid-row: auto auto;
+    margin-top: -5px;
+    font-size: 24px;
+    line-height: 24px;
   }
+
+  @media (min-width: $desktop-width) {
+		grid-template-columns: 315px 30px 315px 30px 315px 30px 285px;
+    grid-row: auto;
+    margin: 0;
+	}
 }
 
 .promo-list__item {
   position: relative;
-  min-height: 160px;
+  min-height: 140px;
   padding: 22px 96px 0 24px;
-  border-radius: 9px 9px 0 0;
+  border-top-left-radius: 10px; 
+  border-top-right-radius: 10px;
 
+  @media (min-width: $tablet-width) {
+    padding: 31px 96px 0 32px;
+    min-height: 140px;
+    border-radius: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 107px;
+    border-radius: 14px 0 0 14px;
+
+  }
+    
   &::after {
     position: absolute;
-    width: 10px;
-    height: 18px;
     top: 22px;
     right: 21px;
+    font-size: 18px;
+
     color: #ffffff;
+
+    @media (min-width: $tablet-width) {
+      top: 90px;
+      right: 0;
+      left: 33px;
+      font-size: 30px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 30px;
+      left: 268px;
+      font-size: 24px;
+    }
   }
 
   &--first {
     background-color: #ff8d30;
+
+    @media (min-width: $tablet-width) {
+      border-top-left-radius: 20px; 
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+    }
+
+    @media (min-width: $desktop-width) {
+      grid-column: 1 / 3;
+      border-radius: 20px 0 0 20px;
+    }
 
     &::after {
       content: "1";
@@ -36,21 +83,65 @@
   }
 
   &--second {
-    margin-top: -80px;
+    position: relative;
+    margin-top: -60px;
     background-color: #ffa530;
+
+    @media (min-width: $tablet-width) {
+      margin: 0;
+      border-radius: 20px 20px 0 0;
+      grid-column: 2 / 4;
+      grid-row: 1 / 2;
+    }
+
+    @media (min-width: $desktop-width) {
+      grid-column: 2 / 5;
+      border-radius: 20px 0 0 20px;
+    }
+
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   top: 0;
+    //   left: -100vh;
+    //   width: 300vh;
+    //   height: 100%;
+    //   background-color: #192144;
+    // }
 
     &::after {
       content: "2";
+
+      @media (min-width: $desktop-width) {
+        left: 300px;
+      }
     }
   }
 
   &--third {
-    margin-top: -80px;
-    min-height: 140px;
+    margin-top: -60px;
     background-color: #ffbd30;
+
+    @media (min-width: $tablet-width) {
+      margin: 0;
+      border-bottom-left-radius: 20px;
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
+    }
+
+    @media (min-width: $desktop-width) {
+      grid-column: 4 / 7;
+      grid-row: 1 / 2;
+      border-radius: 20px 0 0 20px;
+    }
+
 
     &::after {
       content: "3";
+
+      @media (min-width: $desktop-width) {
+        left: 300px;
+      }
     }
   }
 
@@ -58,69 +149,30 @@
     margin-top: -60px;
     min-height: 80px;
     background-color: #ffd74b;
-    border-radius: 9px 9px 9px 9px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+
+    @media (min-width: $tablet-width) {
+      margin: 0;
+      border-radius: 0 0 20px 20px;
+      grid-column: 2 / 4;
+      grid-row: 2 / 3;
+    }
+
+    @media (min-width: $desktop-width) {
+      grid-column: 6 / 8;
+      grid-row: 1 / 2;
+      min-height: 107px;
+      border-radius: 20px 20px 20px 20px;
+    }
 
     &::after {
       content: "4";
     }
   }
-  
-  @media (min-width: $tablet-width) {
-    
-  }
 }
 
 .promo-list__description {
   margin: 0;
-}
-
-.promo-contacts__item {
-  margin: 0;
-  min-height: 40px;
-}
-
-.promo-contacts__icon {
-  display: block;
-  position: relative;
-  width: 40px;
-  height: 40px;
-  background-color: #ff8d30;
-  border-radius: 50%;
-
-  &--img {
-    &::after {
-      position: absolute;
-      content: "";
-      width: 18px;
-      height: 18px;
-      top: 12px;
-      left: 12px;
-      background-repeat: no-repeat;
-    }
-  }
-
-  &--phone {
-    &::after {
-      background-image: url("../img/topmenu-phone.svg");
-    }
-  }
-
-  &--mail {
-    background-color: #ffbd30;
-     
-    &::after {
-      width: 17px;
-      height: 15px;
-      top: 14px;
-      background-image: url("../img/topmenu-mail.svg");
-    }
-  }
-}
-
-.promo-contacts__auth {
-  padding: 13px 0 10px;
-  min-height: 40px;
-  width: 190px;
-  font-size: 17px;
-  line-height: 17px;
 }
