--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,8 @@
 @import "blocks/promo.scss";
 @import "blocks/promo-contacts.scss";
 @import "blocks/promo-list.scss";
+@import "blocks/about-service.scss";
+
 
 
 
