--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,4 +1,5 @@
 .button {
+  position: relative;
   display: block;
   padding: 11px 0;
   font-family: inherit;
@@ -11,6 +12,17 @@
   background-color: #ffd74b;
   border-radius: 10px;
   border: none;
+
+  @media (min-width: $tablet-width) {
+    padding: 29px 0 27px 33px;
+    font-size: 24px;
+    line-height: 24px;
+    text-align: left;
+    border-radius: 20px;
+    text-transform: none;
+  }
+  
+  
 
   // &:hover,
   // &:focus {
@@ -44,5 +56,27 @@
     // &:active {
     //   color: fade-out(#444444, 0.7);
     // }
+  }
+
+  &--triangle {
+    &::after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 0;
+      border-top: 6px solid transparent;
+      border-left: 11px solid #1d2e5b;
+      border-bottom: 6px solid transparent;
+      top: 43%;
+      right: 35px;
+  
+      @media (min-width: $tablet-width) {
+        border-top: 6px solid transparent;
+        border-left: 11px solid #1d2e5b;
+        border-bottom: 6px solid transparent;
+        top: 43%;
+        right: 35px;
+      }
+    }
   }
 }
