--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,9 @@
 @import "blocks/promo-contacts.scss";
 @import "blocks/promo-list.scss";
 @import "blocks/about-service.scss";
+@import "blocks/direction.scss";
+@import "blocks/country-list.scss";
+
 
 
 
