--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,14 +1,14 @@
 .button {
   position: relative;
   display: block;
-  padding: 11px 0;
+  padding: 22px 23px;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   line-height: 18px;
-  text-align: center;
+  text-align: left;
   color: #1d2e5b;
-  text-transform: uppercase;
+  
   background-color: #ffd74b;
   border-radius: 10px;
   border: none;
@@ -17,12 +17,9 @@
     padding: 29px 0 27px 33px;
     font-size: 24px;
     line-height: 24px;
-    text-align: left;
     border-radius: 20px;
     text-transform: none;
   }
-  
-  
 
   // &:hover,
   // &:focus {
@@ -40,6 +37,7 @@
     line-height: 30px;
     color: #161c35;
     border-radius: 25px;
+    text-transform: uppercase;
 
     @media (min-width: $tablet-width) {
       font-size: 20px;
@@ -67,15 +65,15 @@
       border-top: 6px solid transparent;
       border-left: 11px solid #1d2e5b;
       border-bottom: 6px solid transparent;
-      top: 43%;
-      right: 35px;
+      top: 40%;
+      right: 8%;
   
       @media (min-width: $tablet-width) {
         border-top: 6px solid transparent;
         border-left: 11px solid #1d2e5b;
         border-bottom: 6px solid transparent;
         top: 43%;
-        right: 35px;
+        right: 13%;
       }
     }
   }
