--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -66,14 +66,14 @@
       border-left: 11px solid #1d2e5b;
       border-bottom: 6px solid transparent;
       top: 40%;
-      right: 8%;
+      right: 22px;
   
       @media (min-width: $tablet-width) {
         border-top: 6px solid transparent;
         border-left: 11px solid #1d2e5b;
         border-bottom: 6px solid transparent;
         top: 43%;
-        right: 13%;
+        right: 35px;
       }
     }
   }
