--- a/source/sass/blocks/country-list.scss
+++ b/source/sass/blocks/country-list.scss
@@ -15,22 +15,23 @@
   }
 
   @media (min-width: $desktop-width) {
-		// grid-template-columns: 315px 30px 315px 30px 315px 30px 285px;
-    // grid-row: auto;
-    // margin: 0;
+    padding: 0 70px;
   }
   
   &::before {
 		@media (min-width: $tablet-width) {
 			content: "";
 			position: absolute;
-			width: 141px;
-			height: 141px;
+			width: 140px;
+			height: 140px;
 			top: -39px;
       left: -1px;
       background-color: #e2e5f2;
       border-radius: 20px;
 
+      @media (min-width: $desktop-width) {
+        top: -70px;
+      }
 		}
 	}
 }
@@ -53,9 +54,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    // min-height: 107px;
-    // border-radius: 14px 0 0 14px;
-
+    width: 560px;
   }
 }
 
@@ -65,6 +64,7 @@
   @media (min-width: $tablet-width) {
     height: 140px;
     border-radius: 0 20px 20px 0; 
+    flex-shrink: 0;
   }
 }
 
@@ -83,6 +83,10 @@
     margin: 0;
     padding: 6px 28px 0;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
 }
 
 .country-list__title {
@@ -97,25 +101,10 @@
     line-height: 24px;
   }
 
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   width: 11px;
-  //   height: 12px;
-  //   top: 5px;
-  //   left: 163px;
-  //   background-image: url("../img/user.svg");
-  //   background-repeat: no-repeat;
-  //   opacity: 10%;
-
-  //   @media (min-width: $tablet-width) {
-  //     width: 18px;
-  //     height: 20px;
-  //     top: 69px;
-  //     left: 1px;
-  //   }
-  // }
-
+  @media (min-width: $desktop-width) {
+    padding-left: 30px;
+  }
+ 
   &--icon {
     &::after {
       content: "";
@@ -132,6 +121,11 @@
         height: 47px;
         top: -13px;
         left: 369px;
+      }
+
+      @media (min-width: $desktop-width) {
+        top: 0;
+        left: 338px;
       }
     }
   }
@@ -166,6 +160,10 @@
 
     padding-top: 5px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 30px;
+  }
 }
 
 .country-list__visitors {
@@ -179,6 +177,10 @@
   @media (min-width: $tablet-width) {
     position: static;
     padding: 14px 0 20px 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 19px 0 20px 61px;
   }
 
   &::before {
@@ -197,11 +199,10 @@
       left: 29px;
       bottom: 20px;
     }
+
+    @media (min-width: $desktop-width) {
+      left: 32px;
+      bottom: 22px;
+    }
   }
-
-
 }
-
-  
-
-
