--- a/source/sass/blocks/direction.scss
+++ b/source/sass/blocks/direction.scss
@@ -4,7 +4,8 @@
 	background-color: #e5e5e5;
 	border-radius: 0 0 30px 30px;
 	color: inherit;
-	opacity: 0.99;
+	z-index: 5;
+
 
 	@media (min-width: $tablet-width) {
 		padding-bottom: 47px;
@@ -12,15 +13,29 @@
 	}
 
 	@media (min-width: $desktop-width) {
-		// margin-top: -40px;
-		// background-color: #192144;
-		// border-radius: 0 0 55px 55px;
-		// z-index: -1;
+		margin-top: -55px;
+		padding-bottom: 115px;
+		border-radius: 0 0 55px 55px;
 	}
 }
 
 .direction .container {
 	padding-bottom: 34px;
+
+	@media (min-width: $desktop-width) {
+		display: grid;
+		grid-template-columns: 768px auto;
+		grid-template-rows: 140px 140px 140px;
+		row-gap: 10px;
+		padding-top: 216px;
+	}
+}
+
+.direction__wrapper {
+	@media (min-width: $desktop-width) {
+		grid-column: 2 / 3;
+		grid-row: 1 / 3;
+	}
 }
 
 .direction__title {
@@ -39,7 +54,7 @@
 	}
 
 	@media (min-width: $desktop-width) {
-		// padding: 143px 0 30px;
+		padding: 5px 36px 31px 33px;
 	}
 
 	&::after {
@@ -52,12 +67,16 @@
 			right: 0;
 			background-image: url("../img/flags-back@1x.png");
 			background-repeat: no-repeat;
+			z-index: -1;
 
 			@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
 				background-image: url("../img/flags-back@1x.png");
 				background-size: 289px auto;
 			}
+		}
 
+		@media (min-width: $desktop-width) {
+			top: -73px;
 		}
 	}
 }
@@ -74,10 +93,16 @@
 	}
 
 	@media (min-width: $desktop-width) {
-		// margin-bottom: 38px;
+		padding: 0 167px 0 34px;
 	}
 }
 
+.direction__country-list {
+	@media (min-width: $desktop-width) {
+		grid-column: 1 / 2;
+		grid-row: 1 / 4;
+	}
+}
 
 .direction__button {
 	margin: 27px 0 0;
@@ -92,6 +117,10 @@
 	}
 
 	@media (min-width: $desktop-width) {
-		// margin: 85px 0 93px;
+		grid-column: 2 / 3;
+		grid-row: 3 / 4;
+		margin: 71px 35px 0;
+		width: 275px;
+		min-height: 80px;
 	}
 }
