--- a/source/sass/common.scss
+++ b/source/sass/common.scss
@@ -32,6 +32,18 @@ a {
   text-decoration: none;
 }
 
+.br {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+}
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
