--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,8 +15,12 @@
 @import "blocks/about-service.scss";
 @import "blocks/direction.scss";
 @import "blocks/country-list.scss";
-
-
+@import "blocks/companions.scss";
+@import "blocks/user-list.scss";
+@import "blocks/routes.scss";
+@import "blocks/tags.scss";
+@import "blocks/transport.scss";
+@import "blocks/user-level.scss";
 
 
 
