--- a/source/sass/blocks/about-service.scss
+++ b/source/sass/blocks/about-service.scss
@@ -4,7 +4,7 @@
 	border-radius: 0 0 30px 30px;
 	color: #ffffff;
 	z-index: 6;
-	
+
 	@media (min-width: $tablet-width) {
 		background-color: #182044;
 		border-radius: 0 0 60px 60px;
@@ -18,6 +18,7 @@
 }
 
 .about-service .container {
+  position: relative;
 	min-height: 392px;
 	color: #ffffff;
 	background-image: url("../img/about-mobile@1x.png");
@@ -27,15 +28,15 @@
 	@media (min-width: $tablet-width) {
 		background-image: url("../img/about-tablet@1x.png");
 		background-position: 98% 144px;
-		
+
 		@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
 			background-image: url("../img/about-tablet@2x.png");
 			background-size: 376px auto;
 		}
 	}
-	
+
 	@media (min-width: $desktop-width) {
-		background-image: url("../img/globe-back-desktop@1x.jpg");
+		background-image: url("../img/about-desktop@1x.png");
 		background-position: right 60px top 140px;
 
 		@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
