--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -7,8 +7,8 @@
 	z-index: 4;
 
 	@media (min-width: $tablet-width) {
-		// padding-bottom: 47px;
-		// border-radius: 0 0 60px 60px;
+		padding-bottom: 87px;
+		border-radius: 0 0 60px 60px;
 	}
 
 	@media (min-width: $desktop-width) {
@@ -21,7 +21,9 @@
 .companions .container {
 	padding-bottom: 30px;
 
-	@media (min-width: $desktop-width) {
+	@media (min-width: $tablet-width) {
+    padding: 0 75px;
+
 		// display: grid;
 		// grid-template-columns: 768px auto;
 		// grid-template-rows: 140px 140px 140px;
@@ -36,8 +38,13 @@
 
 .companions__wrapper {
 	position: relative;
-	padding: 99px 25px 54px;
-	color: #ffffff;
+  padding: 99px 25px 38px;
+  color: #ffffff;
+
+  @media (min-width: $tablet-width) {
+    padding: 99px 0 0;
+    z-index: 4;
+	}
 
 	@media (min-width: $desktop-width) {
 		// grid-column: 2 / 3;
@@ -53,7 +60,14 @@
       left: -25px;
 			background-color: #141b3b;
 			border-radius: 0 20px 20px 0;
-			z-index: -1;
+      z-index: -1;
+
+    @media (min-width: $tablet-width) {
+      width: 212px;
+      height: 212px;
+      top: 121px;
+      left: -35px;
+    }
 	}
 
 	&::after {
@@ -71,7 +85,31 @@
 		@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
 			background-image: url("../img/smolov-back-desktop@2x.png");
 			background-size: 143px auto;
-		}
+    }
+
+    @media (min-width: $tablet-width) {
+      width: 285px;
+      height: 285px;
+      top: 130px;
+      right: 0;
+      background-image: url("../img/rogovaya-back-desktop@1x.png");
+      border-radius: 20px;
+
+      @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+        background-image: url("../img/rogovaya-back-desktop@2x.png");
+        background-size: 285px auto;
+      }
+    }
+	}
+}
+
+.companions__title {
+
+	@media (min-width: $tablet-width) {
+		padding: 55px 0 17px;
+		font-size: 45px;
+    line-height: 45px;
+    color: #ff8d30;
 	}
 }
 
@@ -80,10 +118,10 @@
 	margin-bottom: 21px;
 
 	@media (min-width: $tablet-width) {
-		// margin-bottom: 63px;
-		// padding: 0 305px 40px 35px;
-		// font-size: 28px;
-		// line-height: 33px;
+		margin-bottom: 0;
+		padding: 0 190px 17px 0;
+		font-size: 28px;
+		line-height: 34px;
 	}
 
 	@media (min-width: $desktop-width) {
@@ -92,11 +130,24 @@
 }
 
 .companions__text {
-	position: relative;
+  position: relative;
+  font-weight: 700;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 0 37px;
+    width: 290px;
+		font-size: 21px;
+    line-height: 25px;
+	}
 }
 
 .companions__list {
   padding: 0 0 9px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 71px;
+  }
+
 
 	&::after {
 		content: "";
@@ -111,9 +162,23 @@
 		z-index: -1;
 
 		@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-			background-image: url("../img/rogovaya-back-mobile@2x.png");
+      background-image: url("../img/rogovaya-back-mobile@2x.png");
 			background-size: 70px auto;
-		}
+    }
+
+    @media (min-width: $tablet-width) {
+      width: 143px;
+      height: 143px;
+      top: -97px;
+      left: -35px;
+      background-image: url("../img/smolov-back-desktop@1x.png");
+      border-radius: 10px;
+
+      @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+        background-image: url("../img/smolov-back-desktop@2x.png");
+        background-size: 143px auto;
+      }
+    }
 	}
 
 	// @media (min-width: $desktop-width) {
@@ -124,13 +189,6 @@
 
 .companions__button {
   min-height: 62px;
-
-
-	@media (min-width: $tablet-width) {
-		// margin: 47px 36px 0;
-		// width: auto;
-		// min-height: 82px;
-	}
 
 	@media (min-width: $desktop-width) {
 		// grid-column: 2 / 3;
