--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -22,13 +22,11 @@
 	padding-bottom: 30px;
 
 	@media (min-width: $tablet-width) {
+		display: grid;
+		grid-template-columns: 285px 285px;
+		grid-template-rows: auto auto auto;
+    column-gap: 50px;
     padding: 0 75px;
-
-		// display: grid;
-		// grid-template-columns: 768px auto;
-		// grid-template-rows: 140px 140px 140px;
-		// row-gap: 10px;
-		// padding-top: 216px;
 	}
 }
 
@@ -42,8 +40,11 @@
   color: #ffffff;
 
   @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+		grid-row: 1 / 2;
     padding: 99px 0 0;
     z-index: 4;
+
 	}
 
 	@media (min-width: $desktop-width) {
@@ -145,6 +146,8 @@
   padding: 0 0 9px;
 
   @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 2;
     padding-bottom: 71px;
   }
 
@@ -190,7 +193,14 @@
 .companions__button {
   min-height: 62px;
 
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+  }
+
+
 	@media (min-width: $desktop-width) {
+
 		// grid-column: 2 / 3;
 		// grid-row: 3 / 4;
 		// margin: 71px 35px 0;
