--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -12,9 +12,9 @@
 	}
 
 	@media (min-width: $desktop-width) {
-		// margin-top: -55px;
-		// padding-bottom: 115px;
-		// border-radius: 0 0 55px 55px;
+		margin-top: -50px;
+		padding-bottom: 134px;
+		border-radius: 0 0 55px 55px;
 	}
 }
 
@@ -27,7 +27,14 @@
 		grid-template-rows: auto auto auto;
     column-gap: 50px;
     padding: 0 75px;
-	}
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 285px 285px 285px 285px;
+		grid-template-rows: auto auto;
+    column-gap: 60px;
+    padding: 184px 60px 0;
+  }
 }
 
 .companions ul {
@@ -44,12 +51,12 @@
 		grid-row: 1 / 2;
     padding: 99px 0 0;
     z-index: 4;
-
 	}
 
 	@media (min-width: $desktop-width) {
-		// grid-column: 2 / 3;
-		// grid-row: 1 / 3;
+		grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    padding: 0 100px 0 69px;
 	}
 
 	&::before {
@@ -67,7 +74,12 @@
       width: 212px;
       height: 212px;
       top: 121px;
-      left: -35px;
+      left: 0;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: -63px;
+      left: 0;
     }
 	}
 
@@ -101,6 +113,11 @@
         background-size: 285px auto;
       }
     }
+
+    @media (min-width: $desktop-width) {
+      top: 252px;
+      left: 130px;
+    }
 	}
 }
 
@@ -111,9 +128,13 @@
 		font-size: 45px;
     line-height: 45px;
     color: #ff8d30;
-	}
-}
+  }
 
+  @media (min-width: $desktop-width) {
+    margin: -2px 0 0;
+    padding: 0 0 23px;
+  }
+}
 
 .companions__description {
 	margin-bottom: 21px;
@@ -125,9 +146,9 @@
 		line-height: 34px;
 	}
 
-	@media (min-width: $desktop-width) {
-		// padding: 0 167px 0 34px;
-	}
+  @media (min-width: $desktop-width) {
+    padding: 0 0 17px;
+  }
 }
 
 .companions__text {
@@ -137,9 +158,14 @@
   @media (min-width: $tablet-width) {
     padding: 0 0 37px;
     width: 290px;
-		font-size: 21px;
+    font-size: 21px;
     line-height: 25px;
-	}
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+    padding-bottom: 3px;
+  }
 }
 
 .companions__list {
@@ -151,6 +177,11 @@
     padding-bottom: 71px;
   }
 
+  @media (min-width: $desktop-width) {
+    grid-column: 3 / 5;
+    grid-row: 1 / 3;
+    padding-bottom: 0;
+	}
 
 	&::after {
 		content: "";
@@ -182,15 +213,16 @@
         background-size: 143px auto;
       }
     }
-	}
 
-	// @media (min-width: $desktop-width) {
-	// 	grid-column: 1 / 2;
-	// 	grid-row: 1 / 4;
-	// }
+    @media (min-width: $desktop-width) {
+      top: 0;
+      left: -204px;
+    }
+	}
 }
 
 .companions__button {
+  position: relative;
   min-height: 62px;
 
   @media (min-width: $tablet-width) {
@@ -198,13 +230,13 @@
     grid-row: 3 / 4;
   }
 
-
-	@media (min-width: $desktop-width) {
-
-		// grid-column: 2 / 3;
-		// grid-row: 3 / 4;
-		// margin: 71px 35px 0;
-		// width: 275px;
-		// min-height: 80px;
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    margin-top: auto;
+    margin-left: 71px;
+    width: 280px;
+    min-height: 80px;
+    z-index: 5;
 	}
 }
