--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,4 +22,6 @@
 @import "blocks/transport.scss";
 @import "blocks/user-level.scss";
 @import "blocks/buisness-tariff.scss";
+@import "blocks/form.scss";
+@import "blocks/contacts.scss";
 
