--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,4 +24,5 @@
 @import "blocks/buisness-tariff.scss";
 @import "blocks/form.scss";
 @import "blocks/contacts.scss";
+@import "blocks/address.scss";
 
