--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -8,6 +8,30 @@
   background-color: #ffd74b;
   border-radius: 0 0 30px 30px;
   z-index: 1;
+
+  @media (min-width: $tablet-width) {
+    padding: 120px 0 84px;
+    border-radius: 0 0 60px 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 110px 0 61px;
+    border-radius: 0 0 55px 55px;
+  }
+}
+
+.address .container {
+  @media (min-width: $tablet-width) {
+    padding: 0 75px;
+  }
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: flex-end;
+    // align-items: flex-start;
+    align-items: center;
+    padding: 0 135px;
+    min-height: 80px;
+  }
 }
 
 .address__contact {
@@ -15,6 +39,17 @@
   position: relative;
   font-style: normal;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 0 62px 94px;
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 1px 0 0 121px;
+    margin-right: 147px;
+  }
 
   &::before {
     content: "";
@@ -25,6 +60,18 @@
     left: 0;
     border-radius: 50%;
     background-color: #121936;
+
+    @media (min-width: $tablet-width) {
+      width: 68px;
+      height: 68px;
+      top: -22px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 90px;
+      height: 90px;
+      top: -31px;
+    }
   }
 }
 
@@ -35,10 +82,32 @@
   left: 14px;
   color: #ffd74b;
 
+  @media (min-width: $tablet-width) {
+    width: 24px;
+    height: 32px;
+    top: -4px;
+    left: 21px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 32px;
+    height: 42px;
+    top: -7px;
+    left: 29px;
+  }
 }
 
 .address__route {
   padding: 19px 45px 19px 20px;
   color: #1D2E5B;
   border: 3px solid #192144;
+
+  @media (min-width: $tablet-width) {
+    padding: 26px 60px 20px 33px;
+    height: 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 324px;
+  }
 }
