--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,4 +25,6 @@
 @import "blocks/form.scss";
 @import "blocks/contacts.scss";
 @import "blocks/address.scss";
+@import "blocks/map.scss";
+@import "blocks/page-footer.scss";
 
