--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -5,12 +5,20 @@
   background-color: #ededee;
   z-index: 0;
   overflow: hidden;
+
+  @media (min-width: $tablet-width) {
+    min-height: 565px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 496px;
+  }
 }
 
 .map__img iframe {
   left: 0;
-  top: 9%;
-  height: 82%;
+  top: 0;
+  height: 100%;
   width: 100%;
   position: absolute;
   border: 0;
