--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -7,6 +7,17 @@
   background-color: #f2f2f2;
   border-radius: 30px 30px 0 0;
   z-index: 1;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 44px;
+    min-height: 140px;
+    border-radius: 60px 60px 0 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 154px;
+    border-radius: 55px 55px 0 0;
+  }
 }
 
 .page-footer .container {
@@ -15,24 +26,25 @@
   justify-content: flex-start;
   align-items: center;
 
-  // @media (min-width: $tablet-width) {
-  //   flex-direction: row;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   min-height: 150px;
-  // }
-
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .page-footer__logo {
   padding-bottom: 28px;
   text-align: center;
 
-  // @media (min-width: $tablet-width) {
-  // }
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    width: 164px;
+  }
 
-  // @media (min-width: $desktop-width) {
-  // }
+  @media (min-width: $desktop-width) {
+    width: 200px;
+  }
 }
 
 .page-footer__social {
@@ -40,8 +52,16 @@
   flex-direction: row;
   justify-content: center;
   margin: 0;
-  padding: 0;
-  padding-bottom: 36px;
+  padding: 0 0 36px 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    margin-left: -11px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: -48px;
+  }
 }
 
 .page-footer__social .social__item {
@@ -51,6 +71,11 @@
   height: 45px;
   border-radius: 50%;
   background-color: #ffd74b;
+
+  @media (min-width: $tablet-width) {
+    width: 62px;
+    height: 62px;
+  }
 }
 
 .page-footer__social .social__icon {
@@ -58,14 +83,29 @@
   top: 12px;
   left: 17px;
 
+  @media (min-width: $tablet-width) {
+    top: 16px;
+    left: 25px;
+  }
+
   &--vk {
     top: 17px;
     left: 10px;
+
+    @media (min-width: $tablet-width) {
+      top: 22px;
+      left: 16px;
+    }
   }
 
   &--instagram {
     top: 15px;
     left: 14px;
+
+    @media (min-width: $tablet-width) {
+      top: 20px;
+      left: 18px;
+    }
   }
 }
 
@@ -80,6 +120,9 @@
   color: #444444;
 
   @media (min-width: $tablet-width) {
+    width: 154px;
+    font-size: 20px;
+    line-height: 20px;
   }
 
   @media (min-width: $desktop-width) {
