--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,4 +27,6 @@
 @import "blocks/address.scss";
 @import "blocks/map.scss";
 @import "blocks/page-footer.scss";
+@import "blocks/page-modal.scss";
+@import "blocks/tariff.scss";
 
