--- a/source/sass/blocks/buisness-tariff.scss
+++ b/source/sass/blocks/buisness-tariff.scss
@@ -207,7 +207,7 @@
 .buisness-tariff__open {
   position: relative;
   margin: 0 0 0 24px;
-  padding: 0;
+  padding: 15px 0;
   text-align: center;
   font-weight: 700;
   color: #132576;
@@ -224,7 +224,7 @@
       position: absolute;
       width: 68px;
       height: 68px;
-      top: -25px;
+      top: -11px;
       left: -24px;
       border-radius: 50%;
       background-color: #e2e5f2;
@@ -238,7 +238,7 @@
   @media (min-width: $tablet-width) {
     position: absolute;
     display: inline-block;
-    top: -3px;
+    top: 13px;
     left: -1px;
     color: #132576;
   }
