--- a/source/sass/blocks/direction.scss
+++ b/source/sass/blocks/direction.scss
@@ -1,7 +1,7 @@
 .direction {
 	margin-top: -35px;
 	position: relative;
-	background-color: #e5e5e5;
+	background-color: #edeff6;
 	border-radius: 0 0 30px 30px;
 	color: inherit;
 	z-index: 5;
@@ -100,7 +100,7 @@
 	@media (min-width: $desktop-width) {
 		grid-column: 1 / 2;
 		grid-row: 1 / 4;
-	}
+  }
 }
 
 .direction__button {
