--- a/source/sass/blocks/buisness-tariff.scss
+++ b/source/sass/blocks/buisness-tariff.scss
@@ -43,6 +43,7 @@
     padding: 37px 95px 94px 98px;
   }
 
+  
   &::after {
     content: "";
     position: absolute;
@@ -52,6 +53,7 @@
     right: 0;
     background-image: url("../img/rates@1x.png");
     background-repeat: no-repeat;
+    background-size: cover;
 
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       background-image: url("../img/rates@2x.png");
@@ -85,7 +87,7 @@
   list-style: none;
 
   @media (min-width: $tablet-width) {
-    padding: 2px 0 59px 90px;
+    padding: 2px 0 57px 90px;
     width: 654px;
   }
 
@@ -133,6 +135,7 @@
   }
 
   &:first-child {
+    min-height: 67px;
     border-top: 1px solid #e1e3e9;
   }
 
@@ -158,6 +161,18 @@
       left: -90px;
       font-size: 28px;
       line-height: 28px;
+    }
+  }
+
+  &--second {
+    &::after {
+      background-color: #ffbd30;
+    }
+  }
+
+  &--third {
+    &::after {
+      background-color: #ffd74b;
     }
   }
 
