--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,7 +4,7 @@
   padding: 10px 0 0;
   font: inherit;
   color: #1D2E5B;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   border-radius: 30px 30px 0 0;
   z-index: 1;
 
