Catalog: header all

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,4 +29,6 @@
 @import "blocks/page-footer.scss";
 @import "blocks/page-modal.scss";
 @import "blocks/tariff.scss";
+@import "blocks/page-main.scss";
+@import "blocks/page.scss";
 
