--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,4 +31,7 @@
 @import "blocks/tariff.scss";
 @import "blocks/page-main.scss";
 @import "blocks/page.scss";
+@import "blocks/alphabet.scss";
+@import "blocks/filter-country.scss";
+@import "blocks/continent.scss";
 
