Catalog: Filtr All

--- a/source/sass/blocks/alphabet.scss
+++ b/source/sass/blocks/alphabet.scss
@@ -10,9 +10,27 @@
     grid-template-columns: repeat(5, 70px);
     grid-template-rows: repeat(5, 76px);
     gap: 7px;
-    
   }
 
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(5, auto);
+    grid-template-rows: repeat(5, auto);
+    gap: 27px 2px;
+
+  }
+}
+
+.alphabet__item {
+  @media (min-width: $desktop-width) {
+    width: 235px;
+    padding: 0px 15px 20px 24px;
+  }
+
+  &--max {
+    @media (min-width: $desktop-width) {
+      padding-top: 40px;
+    }
+  }
 }
 
 .alphabet__letter {
@@ -33,6 +51,13 @@
     opacity: 0.3;
   }
 
+  @media (min-width: $desktop-width) {
+    width: 60px;
+    height: 60px;
+    opacity: 1;
+    margin-bottom: 32px;
+  }
+
   &--active {
     position: relative;
     width: 44px;
@@ -44,6 +69,10 @@
       color: #192144;
       background-color: transparent;
     }
+
+    @media (min-width: $desktop-width) {
+      width: 60px;
+    }
   }
 }
 
@@ -53,6 +82,18 @@
 
   &--desktop {
     display: none;
+
+    @media (min-width: $desktop-width) {
+     display: block;
+     padding: 0 0 0 12px;
+  
+    }
   }
+}
+
+.alphabet__country-link {
+  font-size: 20px;
+  line-height: 30px;
+  color: #444444;
 }
 
