--- a/source/sass/blocks/filter-country.scss
+++ b/source/sass/blocks/filter-country.scss
@@ -1,7 +1,6 @@
 .filter-country {
   margin-top: -35px;
   position: relative;
-  padding-bottom: 27px;
   color: #192144;
   background-color: #e2e5f2;
   border-radius: 0 0 20px 20px;
@@ -9,17 +8,25 @@
 
   @media (min-width: $tablet-width) {
     margin-top: -55px;
-    padding-bottom: 75px;
     border-radius: 0 0 60px 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: #edeff6;
+    border-radius: 0;
   }
 }
 
 .filter-country .container {
+  display: grid;
+
   @media (min-width: $tablet-width) {
-    display: grid;
     grid-template-columns: 400px auto;
     grid-template-rows: auto auto auto;
-    gap: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: auto auto;
   }
 }
 
@@ -39,6 +46,13 @@
     display: flex;
     justify-content: space-between;
     padding-top: 70px;
+    padding-bottom: 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    justify-content: flex-start;
+    padding-right: 30px;
+    margin-bottom: 17px;
   }
 }
 
@@ -53,6 +67,14 @@
     display: none;
   }
 
+  @media (min-width: $desktop-width) {
+    display: block;
+    padding: 30px 0 0 65px;
+    font-size: 20px;
+    line-height: 20px;
+
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -62,6 +84,13 @@
     left: 0;
     background-image: url("../img/filter.svg");
     background-repeat: no-repeat;
+
+    @media (min-width: $desktop-width) {
+      width: 23px;
+      height: 15px;
+      bottom: 23px;
+      left: 20px;
+    }
   }
 }
 
@@ -87,6 +116,10 @@
     text-align: left;
     text-transform: uppercase;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-left: auto;
+  }
 }
 
 .filter-country--closed .filter-country__toggle {
@@ -108,7 +141,34 @@
     text-transform: uppercase;
   }
 
+  @media (min-width: $desktop-width) {
+    width: 192px;
+    height: 40px;
+    top: 34px;
+    right: 26px;
+  }
+}
 
+.filter-country--closed .filter-country__toggle::before {
+  @media (min-width: $desktop-width) {
+    content: "";
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    bottom: 9px;
+    left: 161px;
+    background-image: url("../img/filter-close.svg");
+    background-repeat: no-repeat;
+  }
+}
+
+.filter-country--closed .filter-country__toggle::after {
+  @media (min-width: $desktop-width) {
+    content: "Свернуть";
+    position: absolute;
+    bottom: 6px;
+    left: 8px;
+  }
 }
 
 .filter-country--opened .filter-country__toggle::before {
@@ -155,7 +215,10 @@
     font-size: 35px;
     line-height: 35px;
     bottom: 3px;
+  }
 
+  @media (min-width: $desktop-width) {
+    display: none;
   }
 }
 
@@ -165,6 +228,10 @@
   @media (min-width: $tablet-width) {
     display: inline;
   }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
 }
 
 .filter-country--opened .filter-country__toggle-text {
@@ -172,8 +239,6 @@
     display: none;
   }
 }
-
-
 
 .filter-country__continent {
   padding: 17px 0 0 25px;
@@ -214,6 +279,10 @@
     grid-row: 2 / 3;
     padding: 4px 0px 0 28px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
 }
 
 .filter-country__group-country {
@@ -222,9 +291,13 @@
   @media (min-width: $tablet-width) {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    padding: 0 0 0 57px;
+    padding: 0 0 0 78px;
     font-size: 20px;
     line-height: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
   }
 }
 
@@ -236,16 +309,24 @@
   position: relative;
   width: 270px;
   background-color: #d6daed;
+  margin-bottom: 28px;
 
   @media (min-width: $tablet-width) {
     grid-column: 1 / 3;
     grid-row: 3 / 4;
     width: 615px;
     min-height: 100px;
-    margin: 29px 0 0 36px;
+    margin: 48px 0 75px 36px;
     padding: 0 0 0 47px;
     font-size: 20px;
     line-height: 20px;
+    border-radius: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: auto;
+    margin: 45px 0 120px;
+    padding: 0 0 0 43px;
   }
 
   &::before {
@@ -264,7 +345,9 @@
       bottom: 40px;
       left: 243px;
     }
+
+    @media (min-width: $desktop-width) {
+      left: 594px;
+    }
   }
 }
-
-
