--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,4 +34,7 @@
 @import "blocks/alphabet.scss";
 @import "blocks/filter-country.scss";
 @import "blocks/continent.scss";
+@import "blocks/main-filter.scss";
+@import "blocks/companions-filter.scss";
+@import "blocks/travel-modes.scss";
 
